bigass taft redux

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -839,7 +839,7 @@ USA_fuck_taft:0 "In this section of the tree, we will be playing as §YTheodore 
 USA_demokratische_union:0 "Unlocks the §3Democratic Unity§! mechanic, where we will have to worry about keeping the §3Democrats§! united behind a common agenda"
 USA_reconcile_progressives_strategy:0 "Taft's strategy will be to §Greconcile§! with §Yprogressives§! in the party, giving them government jobs and concessions on policy. This will make them more supportive of us, and could prevent the party from fracturing. However, it cost a lot of political power and may be §9too little too late§!, only serving to strengthen the influence of any potential §tprimary challengers§!"
 USA_fuck_roosevelt:0 "Taft's strategy will be to §Rreduce§! the influence of §Yprogressives§! in the party, giving government positions to §Yconservatives§! and attempting to §tdiscredit§! Roosevelt. This will most likely enrage Roosevelt and other progressives, however if their influence is low enough we will surely survive any primary attempt, and they won't have the political clout to break off from the party. However, it may only §9embolden§! Roosevelt and only serve to make Taft look §tout of touch§!"
-USA_protect_enviornment:0 "Taking these decisions will §Gincrease§! §Yprogressives'§! support!"
+USA_protect_enviornment:0 "Taking these decisions will §Gincrease§! the support of §YProgressive Republicans§!"
 USA_reep_fruit:0 "Upon the opening of the Panama Canal, we will gain a bonus \nConsumer Goods Factories Factor: §Y-5%§! \non the "Panama Canal" national spirit, once the Panama Canal completes construction."
 USA_fight_anti_american_ideals:0 "Socialism and Democracy"
 taftcontrol:0 "Taft's control over the Republican Party will be §7strengthened§!, helping him against any §Ochallenger§!"
@@ -1268,6 +1268,7 @@ USA_the_5_precent_agreement_desc:0 "The Government is going to need an unprecede
 USA_ford_assembly_lines:0 "Rollout Ford Assembly Lines"
 USA_ford_assembly_lines_desc:0 "Ford Motor has recently made a breakthrough with the invention of a so called "assembly line" which has dramatically increased their companies production. We should force the company to give this technology to our ammunition plants, which would dramatically increase their output with said system." 
 appointment:0 "After the §Y1912 election§!, the House of Representatives will increase from §Y391§! seats to §Y433§! seats"
+USA_stabilize_hati:0 "Stabilize Haiti"
 appointment2:0 "We will mantain a narrow majority in the house after the 1910 midterms, preventing possible consequences from a Democrat controlled congress"
 mexican_revolution.tt:0 "§YThis focus will be autocompleted when the§! §GMexican§! revolu§Rtion§! §Yhas begun§!"
 focus_will_be_auto_completed:0 "This focus will be §Yautocompleted§! through an event" 
