--- a/localisation/english/ww1_usa_focus_l_english.yml
+++ b/localisation/english/ww1_usa_focus_l_english.yml
@@ -37,7 +37,6 @@ cannon_lol:0 "President Cannon will begin the slow §Rdismantlement§! of Americ
 USA_fuck_taft:0 "In this section of the tree, we will be playing as §YTheodore Roosevelt§!, not §YWilliam Taft§!. We will attempt §Rreduce§! §YTaft's§! influence on the party and §Gincrease§! our own! §YTaft§! will not go down without a fight, however. We will have to deal with a series of attempts by §YTaft§! to wrestle control over the §YRepublican Party§! in the form of events and missions."
 USA_reconcile_progressives_strategy:0 "Taft's strategy will be to §Greconcile§! with §Yprogressives§! in the party, giving them government jobs and concessions on policy. This will make them more supportive of us, and could prevent the party from fracturing. However, it cost a lot of political power and may be §9too little too late§!, only serving to strengthen the influence of any potential §tprimary challengers§!"
 USA_fuck_roosevelt:0 "Taft's strategy will be to §Rreduce§! the influence of §Yprogressives§! in the party, giving government positions to §Yconservatives§! and attempting to §tdiscredit§! Roosevelt. This will most likely enrage Roosevelt and other progressives, however if their influence is low enough we will surely survive any primary attempt, and they won't have the political clout to break off from the party. However, it may only §9embolden§! Roosevelt and only serve to make Taft look §tout of touch§!"
-USA_protect_enviornment:0 "Taking these decisions will §Gincrease§! §Yprogressives'§! support!"
 USA_reep_fruit:0 "Upon the opening of the Panama Canal, we will gain a bonus \nConsumer Goods Factories Factor: §Y-5%§! \non the "Panama Canal" national spirit, once the Panama Canal completes construction."
 USA_fight_anti_american_ideals:0 "Socialism and Democracy"
 taftcontrol:0 "Taft's control over the Republican Party will be §7strengthened§!, helping him against any §Ochallenger§!"
@@ -289,7 +288,7 @@ ww1_USA.64.d:0 "With a lack of American investment, the Nicaraguan is facing dee
 ww1_USA.64.a:0 "We'll send them an offer they can't refuse!"
 oust_jose_25.tt:0 "We will become §Y25%§! more prepared to force §YJose Madriz§! to flee!"
 oust_jose_100.tt:0 "Our preparedness to force §YJose Madriz§! to flee is §Y100%§!"
-oust_jose.tt:0 "With these decisions, we will be able to replace §YJose Madriz§! with a more... friendly President, who will allow us to upgrade the §YCompany Ventures in the America's§Y national spirit."
+oust_jose.tt:0 "With these decisions, we will be able to replace §YJose Madriz§! with a more... friendly President, who will allow us to upgrade the §YCompany Ventures in the America's§! national spirit."
 ww1_USA.61.t:0 "Jose Madriz flees Nicaragua!"
 ww1_USA.61.d:0 "We've done it! Today Jose Madriz resigned the office of President in Nicaragua, giving power to Juan Estrada, a much more... friendly leader. Already, Juan has publicly endorsed Taft's "dollar diplomacy" strategy, inviting American business and loans to the country."
 ww1_USA.61.a:0 "Mission accomplished."
@@ -323,10 +322,7 @@ ww1_USA.2.a:0 "Let's attempt to diversify crop production."
 ww1_USA.4.t:0 "Charles Evans Hughes confirmed as Supreme Court justice"
 ww1_USA.4.d:0 "Today, without debate, the United States congress confirmed former New York governor Hughes as an Associate Justice on the supreme court. Hughes had seen through many reforms as governor of New York that has earned him popularity amongst progressives from all sides."
 ww1_USA.4.a:0 "Hopefully this will please Roosevelt."
-ww1_USA.5.t:0  "Armed mob drives out Japanese workers in Washington state!"
-ww1_USA.5.d:0 "In a distressing display of racial hostility, Washington state became the stage for a troubling confrontation as armed mobs forcefully drove out 30 Japanese lumberjacks from their homes, attempting to force them to be moved to Texas. Although anti-japanese sentiment is high in America, there is still some calls from more progressive forces in the country to atleast do something."
-ww1_USA.5.a:0 "If we won't defend their freedom, who else will?"
-ww1_USA.5.b:0 "Surely there are more pressing issues facing the country right now."
+
 ww1_USA.6.t:0 "4th of July celebrations!"
 ww1_USA.6.d:0 "It's that time of year again, as Americans from sea to shining sea prepare to celebrate our victory against the British in the Revolutionary War! Already, fireworks are painting the skies as parades across the country begin."
 ww1_USA.6.a:0 "Happy 4th!"
@@ -376,18 +372,13 @@ ww1_USA.32.t:0 "Montana's Glacier National Park Opens!"
 ww1_USA.32.d:0 "The Montanan glacier national park has offically opened today. Containing a breath-taking view of the Rocky Mountains, as well as thousands of plant species, this park is expected to bring tens of thousands of tourists from all around the world."
 ww1_USA.32.a:0 "O beautiful for spacious skies..."
 ww1_USA.33.t:0 ""The Masses" Newspaper Begins Publication"
-ww1_USA.33.d:0 ""The masses", a socialist newspaper calling for union activism, has recently began distributing papers across the nation. While relatively unknown, it has succeeded in swaying some union men."
+
 ww1_USA.33.a:0 "Americans will never be swayed by radicals!"
 ww1_USA.33.b:0 "Denounce them as extremists."
-ww1_USA.34.t:0 "Great Fire of 1911"
-ww1_USA.34.d:0 "A small fire in a barn has gone totally out of control. The entire town of Bangor, Maine has burnt down. 100's of residential and commercial buildings have been lost, hurting Maines economy a lot."
- ww1_USA.38.t:0 "Bread and Roses Strike"
+
   ww1_USA.38.d:0 "A majority immigrant town in Lawrence, Massachusetts is making national news as the workers there have gone on a long and bitter strike. Wanting more pay, the strike began and quickly gained the attention of the Industrial Workers of the World organization, who traveled there in support. The strikers sent their hungry kids across New England, gaining much of the publics sympathty."
 ww1_USA.38.a:0 "Let's hope the figure it out..."
 ww1_USA.34.a:0 "We will give our regrets to the victims."
-   ww1_USA.41.t:0 "White Settlers Finish Exploration of Alaska"
-   ww1_USA.41.d:0 "The vast and unexplored state of Alaska is becoming more and more mapped out as White settlers have crossed the Ditarod River looking for more gold. The river was seen as suprisingly habitable for Alaskan standards, and already the population has reached 2 thousand."
-   ww1_USA.41.a:0 "Could this new city have potential?"
   ww1_USA.47.t:0 "Bloody July"
   ww1_USA.47.d:0 "Mass race riots and destruction across America, now dubbed as "blood July", caused by a lack of police action, have lead to mass lynching across the cities. The death toll was estimated at 419 until police across the nation finally responded, in a harsh crackdown that has lead to many unlawful arrests of black men"
   ww1_USA.47.a:0 "Oh the horror, the horror!"
@@ -451,8 +442,7 @@ rip_juan.tt:0 "§RNicaragua is reaching a breaking point§!"
 negwithrail:0 "This may change the railway owners minds, but it could also be a waste of time..."
 stabilize_dom:0 "A §Gstable§! Dominican Republic is a Dominican Republic ripe for §RAm§!eri§1can§! §Gexploitation!§!"
 appointcon:0 "Taking this decision will §Yreduce progressive Republican§! influence, §Yincrease Conservative republican§! influence and loyalty, as well as giving §Ypolitical power§! and §Ystability§!."
-masses:0 "§RDenouncing these publishments will only give them more attention...§!"
-glacier:0 "The opening of this new park will greatly §Gincrease§! tourism to Montana. This economic growth will be represented by:"
+
 boll:0 "This may have future §Gbenefits§!"
 taftbad:0 "This policy is §Oinconsistent§! with president Taft's previous policies, therefore we will recieve the following §Rpenality§!"
 stop_roosevelt:0 "§YProgressive Republican§W loyalty is above §Y80§!, OR §YProgressive Influence§! is below §Y15§! "
