RAJ Event and Political Tree UPDATE

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2805,6 +2805,9 @@ proto_fascism_banned:0 "Proto-Fascism Banned"
  RAJ_deindustrialisation_dynamic:0 "De-Industrialisation"
  RAJ_deindustrialisation_dynamic_desc:0 ""
  
+ RAJ_non_cooperation_movement:0 "Non-Cooperation Movement"
+ RAJ_indian_home_rule_movement:0 "Indian Home Rule Movement"
+
  RAJ_the_breadbasket_of_the_empire_idea:0 "Breadbasket of the Empire"
  RAJ_british_exploitation:0 "British Exploitation"
 
