--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9278,6 +9278,40 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_raj.13.d:0 "Today, we mourn the passing of Sir Edward Charles Buck, a figure whose contributions to India's agricultural sector and administrative landscape have left an indelible mark. Born into a family steeped in musical tradition, with his father serving as the esteemed organist and master of the choristers at Norwich Cathedral, Sir Buck's journey led him far beyond the realms of music. Educated in Norwich and at Oakham School, Sir Buck pursued higher studies at Clare College, Cambridge, where he distinguished himself with a Bachelor of Laws degree in 1862. His academic achievements were further recognized with an honorary Doctor of Law degree in 1886 and an honorary Fellowship of Clare College in 1898.\n\nJoining the Bengal Civil Service, Sir Buck's tenure saw him serve in various capacities, including the agricultural department of the North-Western Provinces and as secretary to the Revenue and Agricultural Department. Alongside luminaries such as Lockwood Kipling, Sir Buck played a pivotal role in advancing the arts in India, advocating for the use of photography for documentation purposes. However, his tenure was not without controversy, as he found himself embroiled in debates over the future of the Archaeological Survey of India. A passionate outdoorsman, Sir Buck's love for adventure led him to explore the untamed wilderness of the Himalayas, a pursuit he relished alongside native hunters. His residence at The Retreat in Mashobra, where he lived for over a decade, became a hub of intellectual and social activity, hosting notable figures such as Courtenay Ilbert and Earl Roberts.\n\nFor his tireless efforts to modernize India's land revenue system and promote agricultural innovation, Sir Buck earned the moniker of the "Grand Old Man" of Indian agriculture. His dedication and leadership were further recognized with knighthoods in 1886 and 1897, culminating in his appointment as a Knight Commander of the Order of the Star of India.\n\nToday, as we bid farewell to Sir Edward Charles Buck, we reflect on a life lived with purpose and dedication, leaving behind a legacy that will continue to inspire future generations in India and beyond."
  ww1_raj.13.a:0 "Enough to make a grown man cry."
  RAJ_buck_fucking_dies:0 "§YEdward Charles Buck§! dies. You are sad."
+
+ ww1_raj.14.t:0 "Komagata Maru Incident"
+ ww1_raj.14.d:0 "PLACEHOLDER"
+ ww1_raj.14.a:0 "They violated the exclusion laws after all."
+
+ ww1_raj.15.t:0 "All-India Hindu Grand Assembly Formed"
+ ww1_raj.15.d:0 "PLACEHOLDER"
+ ww1_raj.15.a:0 "Another group of fanatics."
+
+ ww1_raj.16.t:0 "Indian Home Rule Movement Formed"
+ ww1_raj.16.d:0 "PLACEHOLDER"
+ ww1_raj.16.a:0 "England's need is India's opportunity."
+
+ ww1_raj.17.t:0 "Lucknow Pact"
+ ww1_raj.17.d:0 "PLACEHOLDER"
+ ww1_raj.17.a:0 "They're more united against our rule than ever now."
+
+ ww1_raj.18.t:0 "Champaran Satyagraha"
+ ww1_raj.18.d:0 "PLACEHOLDER"
+ ww1_raj.18.a:0 "Abolitish the Tinkathia System"
+ ww1_raj.18.b:0 "Supress theses dangerous terrorists."
+
+ ww1_raj.19.t:0 "Kheda Satyagraha"
+ ww1_raj.19.d:0 "PLACEHOLDER"
+ ww1_raj.19.a:0 "Suspend the tax for now."
+ ww1_raj.19.b:0 "Supress theses dangerous terrorists."
+
+ ww1_raj.20.t:0 "Jallianwala Bagh massacre"
+ ww1_raj.20.d:0 "PLACEHOLDER"
+ ww1_raj.20.a:0 "Was this necessary ? God only knows."
+
+ ww1_raj.21.t:0 "Non-cooperation movement"
+ ww1_raj.21.d:0 "PLACEHOLDER"
+ ww1_raj.21.a:0 ""
   
  # PORTUGAL
  ww1_portugal.1.t:0 "Join the Entente"
