state loc fixes

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1002,8 +1002,8 @@
  STATE_1000:0 "Liechtenstein"
  STATE_1001:0 "Leonine City"
  STATE_1002:0 "Delaware"
- STATE_1003:0 "Renkyō Railway"
- STATE_1004:0 "Anpō Railway"
+ STATE_1003:0 "Renkyo Railway"
+ STATE_1004:0 "Anpo Railway"
  STATE_1005:0 "Jingbin Railway"
  STATE_1006:0 "Città di Zara"
 
