--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1917,3 +1917,7 @@
 
  MOU_SOV_communism_autonomy_integrated_puppet:0 "Mountain ASSR"
  MOU_SOV_communism_autonomy_integrated_puppet_DEF:0 "the Mountain Autonomous Soviet Socialist Republic"
+
+ PAP_vatican_neutrality:0 "Vatican City State"
+ PAP_vatican_neutrality_DEF:0 "the Vatican City State"
+ PAP_vatican_neutrality_ADJ:0 "Vatican"
