--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -631,6 +631,8 @@
  ITA_poorly_organized_armed_forces:0 "Poorly-Organized Army"
  ITA_poorly_organized_armed_forces_desc:0 "The army was seen as a critical tool of 'Initialization' from the moment of unification. Politicians on both left and right accepted that regional recruitment would have been more militarily efficient as well as more economical.\n\nThe implications of this organizational structure were numerous; first of all, from a logistical perspective, it was a costly and time-consuming system that greatly complicated and slowed down the process of mobilization. From the standpoint of unit cohesion, often considered being a vital factor in sustaining troop morale."
  ITA_idea_arditi:0 "Reparti d'assalto"
+ ITA_lateran_treaty:0 "Lateran Treaty"
+ ITA_lateran_treaty_desc:0 "The Lateran Treaty recognised Vatican City as an independent state under the sovereignty of the Holy See. The Italian government also agreed to give the Roman Catholic Church financial compensation for the loss of the Papal States. The Roman Question was finally resolved."
 
  FRA_scientists_exodus:0 "Scientists Exodus"
  FRA_scientists_exodus_desc:0 "Following the socialist revolution, the aristocratic and religious elites left the country. This brain drain has deeply haunted the new regime."
