--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1208,6 +1208,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ITA_return_rhodes_mission:0 "Return of the Dodecanese"
  ITA_return_rhodes_mission_desc:0 "Italy agreed to return the Dodecanese to the Ottoman Empire in the Treaty of Ouchy. However, the vagueness of the text, combined with possible subsequent adverse events unfavourable to the Ottomans, it can be allowed a provisional Italian administration of the islands."
  ITA_tyrol_timer:0 "Italian Withdrawl from North Tyrol"
+ ITA_fix_roman_question:0 "Solve the Roman Question"
+ ITA_fix_roman_question_desc:0 "By recognising the Papal State in Vatican City as a sovereign entity, we could put an end to this malus and put an end to the Roman Question."
 
  islamic_support_1:0 "§GLow§! Islamic Support"
  islamic_support_2:0 "§YMedium§! Islamic Support"
