--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -905,7 +905,7 @@
  STATE_903:0 "Zanzibar"
  STATE_904:0 "Wafra"
  STATE_905:0 "Hafar Al Batin"
- STATE_906:0 "Arelerland"
+ STATE_906:0 "Arlon"
  STATE_907:0 "Ardennes"
  STATE_908:0 "Binsui Railway"
  STATE_909:0 "Haman Railway"
