--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1180,5 +1180,5 @@
  US_VIRGIN_ISLANDS:0 "United States Virgin Islands"
  GANJA_STATE:0 "Ganja"
  CITY_OF_ZADAR_STATE:0 "Grad Zadar"
- VATICAN_CITY_STATE:0 "Vatican City"
+ VATICAN_CITY_STATE:0 "Status Civitatis Vaticanae"
 
