British-Ottoman Theatre Changes

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8939,6 +8939,17 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_england.260.t:0 "Protection over the Persian Oil Reserves"
  ww1_england.260.d:0 "The outbreak of the Great War has left the British oil reserves in Persia vulnerable. We must send troops to prepare for possible emergencies in Persia and the neighbouring regions."
  ww1_england.260.a:0 "Save the lifespawn of oils!"
+ ww1_england.261.t:0 "Proposal of the Fao Landing"
+ ww1_england.261.d:0 "An operation is proposed to secure the Fao Peninsula. The objective is to capture the strategically important Fao Fortress, which guards the Shatt al-Arab waterway. The landing will involve a coordinated effort of naval and land forces, aimed at quickly overwhelming the Ottoman defenses and securing a foothold for further operations in Mesopotamia. If successful, this daring plan will deliver a significant blow to Ottoman control over the region."
+ ww1_england.261.a:0 "Approve the plan"
+ ww1_england.261.b:0 "Such an operation is too risky now"
+ ww1_england.262.t:0 "Success of the Fao Landing"
+ ww1_england.262.d:0 "Reports confirm the successful execution of the Fao Landing. British forces quickly overcame the Ottoman defenses and captured the Fao Fortress. With the peninsula under control, the path is clear to push further into Mesopotamia and challenge Ottoman efforts in the Middle East."
+ ww1_england.262.a:0 "Bagdad or Bust!"
+ ww1_england.263.t:0 "British capture Fao"
+ ww1_england.263.d:0 "Distressing news comes from the Fao Peninsula. British forces launched a surprise landing operation and successfully captured the Fao Fortress. Despite the valiant efforts of the defenders, the enemy's superior numbers and preparation overwhelmed the positions. The garrison deserted after their main officer, Captain Ibn Abdullah, was killed."
+ ww1_england.263.a:0 "We must reinforce Mesopotamia!"
+
 
  #the following events relate to Egypt and the British Collapse, and don't all directly relate to Britain.
  ww1_england.52.t:0 "Egypt breaks from our rule!"
