William Birdwood general

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1097,6 +1097,7 @@
  ENG_manny_shinwell:0 "Manny Shinwell"
  ENG_reginald_george_watson:0 "Reginald George Watson"
  ENG_william_shakespeare:0 "William Shakespeare"
+ ENG_william_birdwood:0 "William Birdwood"
  
  # ETHIOPIA
  ETH_habte_giyorgis_dinegde:0 "Habte Giyorgis Dinegde"
