--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2084,7 +2084,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_intel_to_enemies_1:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-1%§!\n"
  TUR_minority_recruitable_population_down:0 "[TUR_minority_recruitable_population_down]"
  TUR_minority_recruitable_population2_down:0 "[TUR_minority_recruitable_population2_down]"
- TUR_minority_recruitable_population_normal:0 "£manpower_texticon  Recruitable Population: §G+3.00%§!\n"
+ TUR_minority_recruitable_population_normal:0 "£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
+ TUR_minority_recruitable_population_4_5:0 "£manpower_texticon  Recruitable Population: §G+4.50%§!\n"
+ TUR_minority_recruitable_population_4:0 "£manpower_texticon  Recruitable Population: §G+4.00%§!\n"
+ TUR_minority_recruitable_population_3_5:0 "£manpower_texticon  Recruitable Population: §G+3.50%§!\n"
+ TUR_minority_recruitable_population_3:0 "£manpower_texticon  Recruitable Population: §G+3.00%§!\n"
  TUR_minority_recruitable_population_2_5:0 "£manpower_texticon  Recruitable Population: §G+2.50%§!\n"
  TUR_minority_recruitable_population_2:0 "£manpower_texticon  Recruitable Population: §G+2.00%§!\n"
  TUR_minority_recruitable_population_1_5:0 "£manpower_texticon  Recruitable Population: §G+1.50%§!\n"
@@ -2194,8 +2198,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_stability_normal:0 "£stability_texticon  Stability: §G+0.20%§!\n"
  TUR_minority_stability_1:0 "£stability_texticon  Stability: §G+0.10%§!\n"
  TUR_minority_war_support_down:0 "£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
-
- TUR_south_slavic_minority_level_down_gumulcine:0 "Modify [TUR_get_state_minority] by\n[TUR_minority_resistance_decay_down][TUR_minority_required_garrison_factor_down]£manpower_texticon  Recruitable Population: §G+2.50%§!\n[TUR_minority_stability_war_support_down][TUR_minority_stability_down]"
+ TUR_minority_stability_up_1:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
