--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4886,7 +4886,7 @@
  TUR_line_up_armenian_traitors_tt1:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
  TUR_line_up_armenian_traitors_tt2:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
  TUR_line_up_armenian_traitors_tt3:0 "Modify £ww1_flag_GEO  §YGeorgian Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
- TUR_central_governance_in_arabia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Supplies: §G+5%§!\nLocal Construction Speed: §G+5%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\n\nWar Support: §R-0.10%§!\n"
+ TUR_central_governance_in_arabia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Supplies: §G+5%§!\nLocal Construction Speed: §G+5%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\nWar Support: §R-0.10%§!\n\n"
  TUR_central_administration_in_syria_tt:0 "Unlocks §YIntegrate Syrian Vilayets§! Decisions\nUnlocks §YPro-Ottoman Propaganda for Shia's§! Decisions"
  TUR_entrench_rule_in_mesapotamia_tt:0 "Unlocks §YPro-Ottoman Propaganda for Shia's§! Decisions"
  TUR_centralize_tax_collection_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Construction Speed: §G+5%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\n"
@@ -4894,6 +4894,7 @@
  TUR_increase_arab_conscription_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nRecruitable Population: §G+5.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\n"
  TUR_increase_arab_conscription_tt2:0 "Unlocks §YIncrease Conscription in Middle East§! Decisions\n"
  TUR_increase_arab_conscription_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nRecruitable Population: §G+3.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\n"
+ TUR_integrate_hejaz_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Construction Speed: §G+5%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\n\n"
  TUR_temporary_law_of_deportation_tt:0 "Unlocks §YExterminate Armenians§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\nUnlocks §YSlaughter Assyrians§! Decisions.\nThese decisions will allow us to reduce the effects of £ww1_flag_ARM  §YArmenian Minority§!, aiming to §Ytotally getting rid of it§! selected enough times.\n"
  has_south_slavic_minority:0 "Has £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! present within the state"
  has_greek_minority:0 "Has £ww1_game_rule_flag_GRE  §YGreek Minority§! present within the state"
