conservative tree progressing

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -873,6 +873,12 @@ FRA_law_against_far_left_leagues_desc:0 "§YJacques Piou§!'s bill proposes the 
 FRA_dreyfusard_act:0 "Dreyfusard Act"
 FRA_dreyfusard_act_desc:0 "§Y[FRA.getLeader]§!'s bill' allows the supervision of media accusations, aimed at combating a possible 4th power in France (power of the media). The proposal regulates the processing of information and allows legal action to be taken in the event of dissemination of unverified or invalid information.\n\nThe law also projects a government note on the Dreyfus affair, officially declaring in the bill that the lieutenant colonel was a victim of this fourth power."
 
+FRA_anarchism_repression_law:0 "Anarchism Repression Law"
+FRA_anarchism_repression_law_desc:0 "Deputy §YDe Cavaignac§! proposed an extension of the second security law and the law on anti-left leagues. This new law prohibits anarchist, revolutionary union and anti-state movements. Anti-system movements are then judged “hostile to the interests of France”. Politically claiming to be part of a banned movement can result in a fine of 50,000 francs and up to 2 years in prison.\n\nGroups currently claiming to be anarchists, revolutionary syndicalists or anti-state will have up to 6 months to disband."
+
+FRA_goncourt_academy_subvention:0 "Goncourt Academy Subvention"
+FRA_goncourt_academy_subvention_desc:0 "The Goncourt Academy is a literary cenate created in 1900 promoting the most interesting works each year. The Goncourt competition can be financed to obtain better influence via greater promotion, the extension of the cenatorial circle and the coverage of numerous fixed costs."
+
  FRA_unlock_HLM_focus:0 "Unlock Focus : §YHBM Project§!"
 
 
