--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1217,6 +1217,8 @@
  FRA_alexandre_ribot:0 "Alexandre Ribot"
  FRA_jacques_piou:0 "Jacques Piou"
  FRA_leon_daudet:0 "Léon Daudet"
+ FRA_antoine_schwerer:0 "Antoine Schwerer"
+ FRA_maurice_barres:0 "Maurice Barrès"
  FRA_nicolas_saclois:0 "Nicolas Saclois"
  FRA_matthieu_abriot:0 "Matthieu Abriot"
  FRA_ernest_monis:0 "Ernest Monis"
