--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1838,6 +1838,35 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_france.414.d:0 "Following the union of the AF and the PLA, but also the phenomenal revival of the popularity of Catholic assemblies within the population, particularly with workers' circles and the UCIDS, the political situation also changed. Opposed within the alliance of the rights, Jacques Piou and Léon Daudet clashed internally on national and identity issues.\n\nIf the first favored a "soft" conservative right-wing republic, Daudet is a convinced restorationist, very popular following Pope Pius X's approval of his political movement. Following a vote within the coalition, Piou withdrew from his role as leader of the wing in favor of Daudet."
  ww1_france.414.a:0 "We are the “real” Right!"
 
+ ww1_france.415.t:0 "Socialist Manifestation in Paris"
+ ww1_france.415.d:0 "A large demonstration took place in Paris to protest the vote on the revision of the 1905 law. Nearly 100,000 French people demonstrated in the capital, calling for the withdrawal of the parliamentary project and the maintenance of the separation of the church and of State. Led by several figures such as Jean Allemane or Marcel Sembat, the procession passed in front of the Palais Bourbon, the Hotel Matignon and the Arc de Triomphe."
+ ww1_france.415.a:0 "Watch them closely"
+ ww1_france.415.b:0 "We shouldnt escalate this"
+ FRA_abandonned_1905_revision:0 "Has Abandonned 1905 Law Revision"
+
+ ww1_france.416.t:0 "Left-Wing Rally in Marseille"
+ ww1_france.416.d:0 "A political rally of the left was organized in Marseilles by George Clemenceau and several socialist figures such as Raymond Pointcarré and Léon Gambetta. Posted at the Notre Dame de la Garde basilica, the speeches continued all afternoon, calling for collective action to oppose the vote on the law. Strong popular support followed, generating marches throughout the city, but also in several large cities in France."
+ ww1_france.416.a:0 "Concerning..."
+ ww1_france.416.b:0 "We shouldnt escalate this"
+
+ ww1_france.417.t:0 "Rioters Stopped in Nantes"
+ ww1_france.417.d:0 "Police forces carried out a major control operation in the city of Nantes, in western France. Following several demonstrations, numerous groups of thugs were formed, the latter having damaged several buildings, including statues and historic squares. Thus, the castle of the kings of Brittany was vandalized, insulting writings being written on the ramparts. Several administration buildings have been damaged.\n\nThe police forces managed to arrest numerous rioters thanks to the two security acts passed a few months earlier, making it possible to facilitate the procedures for judging and arresting these criminals."
+ ww1_france.417.a:0 "Fortunately we have strengthened the authority of the police!"
+
+ ww1_france.418.t:0 "Monarchist Support"
+ ww1_france.418.d:0 "In parallel with the numerous demonstrations organized by the left-wing cartel, we received financial and informative support from many supporters of the pro-monarchist struggle. Thus, intellectuals and politicians like Antoine Schwerer, Maruice Barrès or Edouard de Castelnau used their contacts with supporters to assist the police, organize counter-demonstrations and limit the actions of our opponents."
+ ww1_france.418.a:0 "Thanks God."
+
+ ww1_france.419.t:0 "Bloody Riots in Paris"
+ ww1_france.419.d:0 "The situation has become tense in Paris. New demonstrations are organized daily to protest against the revision of the 1905 law; socialist activism has never been so strong in the country. Despite their minority, trade unionists and other supporters of the left managed to organize large blockades in the main arteries of the city.\n\nThe police, seeking to clear the way, quickly had to use firearms to disperse the crowd. Unfortunately, SFIO activists, notably anarchists, were also equipped with rifles. Exchanges took place, resulting in the death of 9 police officers and 5 demonstrators."
+ ww1_france.419.a:0 "Oh, no..."
+ ww1_france.419.b:0 "We shouldnt escalate this"
+
+ ww1_france.420.t:0 "Blum Speech"
+ ww1_france.420.d:0 "The socialist left deputy who joined SFIO Léon Blum organized a new rally at the Place de la Bastille, in Paris. During his speech lasting almost 2 hours, the socialist leader denounced a "right beyond all reality", he also called for not stopping symbolic actions, even after the passage of the law. He also confirmed that a reform of institutions was necessary to be more representative of the people, arguing that parliament would not have real legitimacy."
+ ww1_france.420.a:0 "The people voted, Blum"
+ ww1_france.420.b:0 "We shouldnt escalate this even more..."
+
  #BELGIUM
  ww1_belgium.1.t:0 "Rape of Belgium"
  ww1_belgium.1.desc:0 "Reports have come in describing the outright barbaric treatment of Belgian civilians by Germans. Anticipating guerrilla attacks from francs-tireurs who don’t actually exist, German commanders have taken civilian hostages as they pass through towns and villages, then shoot the hostages in groups whenever German soldiers are killed.\n\nBlamed on shadow guerrillas, the usual stray bullets and friendly fire incidents have already resulted in hundreds of murdered Belgians, and for reasons that remain unclear, the historic city and university of Louvain were burned.\n\nJust like looting and murder, rape was widespread."
