--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2962,6 +2962,8 @@ we_are_number_one_Naval_treaty_nation:0 "We are the most powerful navy of all ad
  aland_dmz_modifier: "Demilitarized Islands"
  aland_dmz_modifier_desc: "The Åland Islands have been demilitarized since the Treaty of Paris in 1856, but in 1906 Russia broke Åland convention of 1856 and placed troops into the islands to "stop smuggling of arms into Finland". Even though Russian troops are stationed in the islands they have still agreed not to fortify the islands."
  
+ FRA_socialism_activism:0 "Socialist Activism"
+ FRA_socialism_activism_desc:0 "Radical left-wing socialist, anarchist, trade unionist and communist elements organized against the state, regularly perpetuating sabotage, demonstrations and rallies against the government."
 FRA_anti_french_resistance:0 "Anti-French Resistance"
 FRA_colonial_conscription:0 "Colonial Conscription"
 
