--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -329,6 +329,7 @@
  moderate_socialist:0 "Moderate Socialist"
  consensual_figure:0 "Consensual Figure"
  christian_republicain:0 "Christian Republicain"
+ politized_admiral:0 "Politized Admiral"
  anarchist_author:0 "Anarchist Author"
  industrial_reformer:0 "Industrial Reformer"
  democratic_fighter:0 "Fighter for Democracy"
